@@ -17,6 +17,7 @@
     * Add periods to exception messages.
   [New Features]
     * Add the Sys::Socket::Errno doc.
+    * Add the say method to the Sys class.
     
 0.494 2023-11-12
   [Prerequirement Changes]
